--- a/demo/corsair-fly/fly.toml
+++ b/demo/corsair-fly/fly.toml
@@ -1,33 +1,23 @@
-app = 'corsair-fly-demo'
-primary_region = 'sjc'
+# fly.toml app configuration file generated for corsair on 2026-01-30T01:54:11Z
+#
+# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
+#
 
-# NOTE: This app is part of a pnpm workspace monorepo
-# Deploy from the monorepo root with:
-# cd /path/to/corsair && fly deploy --config demo/corsair-fly/fly.toml
+app = 'corsair'
+primary_region = 'ewr'
 
 [build]
-  dockerfile = "Dockerfile.fly"
 
 [http_service]
-  internal_port = 3000
+  internal_port = 8080
   force_https = true
   auto_stop_machines = 'stop'
   auto_start_machines = true
   min_machines_running = 0
   processes = ['app']
 
-  [[http_service.checks]]
-    interval = '30s'
-    timeout = '5s'
-    grace_period = '10s'
-    method = 'GET'
-    path = '/api/health'
-
-[env]
-  NODE_ENV = 'production'
-  PORT = '3000'
-
 [[vm]]
   memory = '1gb'
   cpu_kind = 'shared'
   cpus = 1
+  memory_mb = 1024
