--- a/packages/corsair/package.json
+++ b/packages/corsair/package.json
@@ -72,6 +72,7 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
+    "test:api": "jest --testPathPattern=api\\.test\\.ts",
     "build": "tsup && tsc -p tsconfig.build.json",
     "build:watch": "tsup --watch",
     "typecheck": "tsc --noEmit",
