--- a/demo/minimal/package.json
+++ b/demo/minimal/package.json
@@ -10,7 +10,7 @@
     "example": "tsx example.ts"
   },
   "dependencies": {
-    "corsair": "workspace:*",
+    "corsair": "^0.1.3",
     "express": "^4.18.2",
     "pg": "^8.12.0"
   },
